# drones-swarm

./: .gitignore  README.md
4DDS/ros2_ws/: clock.bash  geopings.csv  kill.bash  map.bash  register.bash  run.sh  setup.bash  target_position.csv
4DDS/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
4DDS/ros2_ws/install/analysis/lib/analysis/: ConvertToCSV
4DDS/ros2_ws/install/analysis/share/analysis/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
4DDS/ros2_ws/install/base_station/lib/base_station/: BaseStation
4DDS/ros2_ws/install/base_station/share/base_station/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
4DDS/ros2_ws/install/drone/lib/drone/: Drone
4DDS/ros2_ws/install/drone/share/drone/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
4DDS/ros2_ws/install/fdds_messages/share/fdds_messages/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
4DDS/ros2_ws/install/obstacle_avoidance/include/obstacle_avoidance/: ObstacleAvoidance.hpp
4DDS/ros2_ws/install/obstacle_avoidance/share/obstacle_avoidance/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
4DDS/ros2_ws/install/parameters/include/parameters/: Parameters.hpp  yaml.hpp
4DDS/ros2_ws/install/parameters/share/parameters/: local_setup.bash  local_setup.dsv  (+8 more)
4DDS/ros2_ws/log/: latest_list
4DDS/ros2_ws/log_1729516215/: log_1729516215_0.db3
4DDS/ros2_ws/src/analysis/: package.xml  setup.cfg  setup.py
4DDS/ros2_ws/src/base_station/: CMakeLists.txt  package.xml
4DDS/ros2_ws/src/base_station/src/: BaseStation.cpp
4DDS/ros2_ws/src/drone/: CMakeLists.txt
4DDS/ros2_ws/src/drone/include/drone/: Drone.hpp  geo.hpp
4DDS/ros2_ws/src/drone/src/: Drone.cpp  main.cpp
4DDS/ros2_ws/src/fdds_messages/: CMakeLists.txt  package.xml
4DDS/ros2_ws/src/fdds_messages/msg/: Flocking.msg
4DDS/ros2_ws/src/fdds_messages/src/: Messaging.cpp
4DDS/ros2_ws/src/obstacle_avoidance/: CMakeLists.txt
4DDS/ros2_ws/src/obstacle_avoidance/include/obstacle_avoidance/: ObstacleAvoidance.hpp
4DDS/ros2_ws/src/obstacle_avoidance/src/: ObstacleAvoidance.cpp
4DDS/ros2_ws/src/parameters/: CMakeLists.txt
4DDS/ros2_ws/src/parameters/include/parameters/: Parameters.hpp  yaml.hpp
4DDS/ros2_ws/src/parameters/src/: Parameters.cpp  yaml.cpp
4DDS/ros2_ws/src/stigmergy/: CMakeLists.txt  package.xml
4DDS/ros2_ws/src/stigmergy/include/stigmergy/: StigmergyMap.hpp
4DDS/ros2_ws/src/stigmergy/src/: StigmergyMap.cpp  StigmergyMap.hpp  main.cpp  yaml.cpp
4DDS/ros2_ws/src/stigmergy_map/: CMakeLists.txt
4DDS/ros2_ws/src/stigmergy_map/src/: StigmergyMap.cpp
4DDS/ros2_ws/src/target_detection/: CMakeLists.txt  package.xml
4DDS/ros2_ws/src/target_detection/src/: TargetDetection.cpp
4DDS/ws/: gazebo_ros_pkgs.repos  setup.bash
4DDS/ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
4DDS/ws/log/: latest_build
include/: global_variables.nls  statistics_procedures.nls  stigmergy_procedures.nls
matlab code/: startSimulation_lastresultnumber.mat  startSimulation_result_HOST-131-114-208-196.M.UNIPI.IT_01.mat
matlab code/DE/: computenewpopulation.m  concatpath.m  demo2.m  differentialevolution.html  existfile.m  findfiles.m  foxholes.m  gethostname.m  mbdelete.m  removefilesemaphore.m  rosenbrocksaddle.m  rosenbrocksaddle_lastresultnumber.mat  textwrap2.m
matlab code/FitnessFunction/: CheckParams.m  convert.m  getEvaluationParams.m  writeConfigFile.m
pgm to txt/: dotProcessing.m  output.txt
scenarios/blank/: scenario
scenarios/dump/: configuration.txt
scenarios/fireTracking/: configuration.txt
scenarios/fireTracking/frames/: frame_0  frame_1
scenarios/fireTracking/include/: utility.nls
scenarios/fireTracking/results/: simResults_1.txt
scenarios/h2sLeak/results/: simResults_1.txt
scenarios/ruralMine/: configuration.txt  scenario
scenarios/shapeScenario/: configuration.txt  scenario
scenarios/urbanMine/: configuration.txt
scenarios/viareggioLPG/: configuration.txt
scenarios/viareggioLPG/frames/: frame_1  frame_3  frame_base
scenarios/viareggioLPG/results/: simResults_1.txt  simResults_2.txt
sciadro-3.1/: README.rtf
sciadro-3.1/include/: drawing_procedures.nls  drone_breed.nls  io_procedures.nls  setup_procedures.nls
sciadro-3.1/matlab code/: Environment Paths.txt  differentialEvolutionNetLogo.m
sciadro-3.1/matlab code/DE/: chompsep.m  deletewithsemaphores.m  demo1.m  demo3.m  differentialevolution.m  differentialevolutionslave.m  displayoptimizationhistory.m  existfile.c  generateemptyfile.m  getdefaultparams.m  getusername.m  license.txt  mbtime.m  rosenbrocksaddle_result_DESKTOP-JC52P2U_01.mat  rosenbrocksaddle_result_DESKTOP-JC52P2U_02.mat  setfilesemaphore.m  setrandomseed.m
sciadro-3.1/matlab code/FitnessFunction/: getEnvPaths.m  getFitnessValue.m  getParameters.m  launchNetLogo.m  parseOutput.m  restoreOriginalConf.m  setGlobal.m  setupSimulationEnv.m  startSimulation.m  statistics.m
sciadro-3.1/pgm to txt/: exportImageCoordinates.m  exportImageObstacleCoordinates.m  exportImageTargetCoordinates.m  image.pgm
sciadro-3.1/scenarios/fireTracking/: Fire.nlogo
sciadro-3.1/scenarios/fireTracking/frames/: frame_2  frame_3  frame_4
sciadro-3.1/scenarios/h2sLeak/: configuration.txt
sciadro-3.1/scenarios/urbanMine/: scenario
sciadro-3.1/scenarios/viareggioLPG/frames/: frame_0  frame_2
sciadro-3.1/simulation/tempSim578/include/: flocking_procedures.nls  targets_colors.nls
sciadro-3.1/simulation/tempSim578/scenarios/dump/: configuration.txt  scenario
simulation/tempSim578/: SCD src.nlogo
simulation/tempSim578/include/: obstacleAvoidance_procedures.nls  overlapAvoidance_procedures.nls  targets_moving.nls  targets_procedures.nls
(+5062 files in other folders)
